@@ -1,3 +1,12 @@
+2004-03-30  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* VERSION: Bumped package manager version to 0.18.4, a release
+	on branch_0_18 with bootstrapping improvements
+
+2004-03-30  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* bootstrap.pl: Be careful about permissions when creating directories
+
 2004-03-18  Daniel Macks  <dmacks@netspace.org>
 
 	* fink.conf.5.in: Documented "Buildpath". Fixed "Distribution" to
